[BUGFIX] Fix path to icons in ext:form
One ../ too much, remove it to have the icons working again.

Resolves: #77193
Releases: master
Reviewed-on: https://review.typo3.org/49148
Tested-by: Bamboo TYPO3com <info@typo3.com>
Tested-by: Joe Jones <foesse@web.de>
Tested-by: Benni Mack <benni@typo3.org>

--- a/typo3/sysext/form/Resources/Public/Css/form.css
+++ b/typo3/sysext/form/Resources/Public/Css/form.css
@@ -574,10 +574,10 @@
   background-image: none;
 }
 #fake-form .formwizard-element button.t3-icon-edit-delete {
-  background-image: url('../../../../../core/Resources/Public/Icons/T3Icons/actions/actions-delete.svg');
+  background-image: url('../../../../core/Resources/Public/Icons/T3Icons/actions/actions-delete.svg');
 }
 #fake-form .formwizard-element button.t3-icon-document-open {
-  background-image: url('../../../../../core/Resources/Public/Icons/T3Icons/actions/actions-open.svg');
+  background-image: url('../../../../core/Resources/Public/Icons/T3Icons/actions/actions-open.svg');
 }
 @media only screen and (max-width: 615px) {
   .tab-content fieldset.form-section ol#formwizard-right {
